# Unite-DeFi-ICP

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
backend/escrow/: Cargo.toml  escrow.did
backend/escrow/src/: lib.rs  state.rs
backend/factory/: Cargo.toml  factory.did
backend/factory/src/: lib.rs  storage.rs
backend/orderbook/: Cargo.toml  orderbook.did
backend/orderbook/src/: lib.rs  storage.rs
backend/relayer/: Cargo.toml  Readme.md  relayer.did
backend/relayer/src/: auction.rs  lib.rs  tick.rs
backend/relayer/src/state/: auctions.rs  config.rs  mod.rs  secret.rs
backend/relayer/src/verifier/: evm.rs  icp.rs  mod.rs
backend/resolver/: Cargo.toml  Readme.md  resolver.did
backend/resolver/src/: error.rs  icp.rs  lib.rs  tick.rs
backend/resolver/src/evm/: deploy.rs  escrow.rs  mod.rs
backend/resolver/src/state/: config.rs  mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: escrow.rs  lib.rs  order.rs  params.rs  timelocks.rs
backend/shared/src/evm/: broadcast.rs  config.rs  escrow.rs  factory.rs  immutable.rs  mod.rs  signer.rs
backend/shared/src/evm/abis/: escrow_dst.json  escrow_factory.json  escrow_src.json
backend/shared/src/icp/: funds.rs  ledger.rs  mod.rs
contracts/: EscrowDst.sol  Factory.sol  Readme.md
contracts/abi/: factory.json
contracts/scripts/: deploy_factory.s.sol
docs/: 0. setup.md  1. orderbook-test.md  2. relayer-auction-test.md  3. relayer.md  4. escrow-factory-test.md  5. start-to-end-swap-test.md
frontend/: package-lock.json  package.json
frontend/app/: index.html  package.json  tsconfig.json  vite.config.js
frontend/app/src/: App.tsx  index.scss
frontend/app/src/components/: AssetSelector.tsx  Layout.tsx  LoginPanel.tsx  PriceCurveEditor.tsx  WalletConnector.tsx
frontend/app/src/contexts/: OrderContext.tsx  WalletContext.tsx
frontend/app/src/hooks/: useIcpIdentity.ts  useOrders.ts
frontend/app/src/model/: icp.ts
frontend/app/src/pages/: Dashboard.tsx  NewOrder.tsx  Settings.tsx  TradeTimeline.tsx
scripts/: gen_escrow_arg_did.py
src/unite-escrow-backend/: Cargo.toml
src/unite-escrow-frontend/: package.json
src/unite-escrow-frontend/src/: App.jsx
