[package]
name = "factory"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
shared = { path = "../shared" }

# for debugging the wasm
sha2 = "0.10"
hex = "0.4"

# for short-circuiting transitive dependency resolution from ethers-core in shared
getrandom = { workspace = true }