[package]
name = "orderbook"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
shared = { path = "../shared" }

# for short-circuiting transitive dependency resolution from ethers-core in shared
getrandom = { workspace = true }